# AdventOfCode

./: .gitignore  LICENSE  README.md  pyproject.toml
2016/: aoc2016_1a.py  aoc2016_1b.py  aoc2016_2a.py  aoc2016_2b.py  aoc2016_3a.py  aoc2016_3b.py  aoc2016_4a.py  aoc2016_4b.py  aoc2016_5a.py  aoc2016_5b.py  aoc2016_6a.py  aoc2016_6b.py  aoc2016_7a.py  aoc2016_7b.py  aoc2016_8a.py  aoc2016_8b.py
2017/: aoc2017_10a.py  aoc2017_12a.py  aoc2017_12b.py  aoc2017_13a.py  aoc2017_13b.py  aoc2017_15a.py  aoc2017_15b.py  aoc2017_16a.py  aoc2017_16b.py  aoc2017_17a.py  aoc2017_1a.py  aoc2017_1b.py  aoc2017_2a.py  aoc2017_2b.py  aoc2017_3a.py  aoc2017_3b.py  aoc2017_4a.py  aoc2017_4b.py  aoc2017_5a.py  aoc2017_5b.py  aoc2017_6a.py  aoc2017_6b.py  aoc2017_7a.py  aoc2017_7b.py  aoc2017_8a.py  aoc2017_8b.py  aoc2017_9a.py  aoc2017_9b.py
2018/: aoc2018_10a.py  aoc2018_10b.py  aoc2018_11a.py  aoc2018_11b.py  aoc2018_12a.py  aoc2018_12b.py  aoc2018_13a.py  aoc2018_13b.py  aoc2018_14a.py  aoc2018_14b.py  aoc2018_15a.py  aoc2018_15b.py  aoc2018_16a.py  aoc2018_16b.py  aoc2018_17a.py  aoc2018_17b.py  aoc2018_18a.py  aoc2018_18b.py  aoc2018_19a.py  aoc2018_1a.py  aoc2018_1b.py  aoc2018_20a.py  aoc2018_20a_.py  aoc2018_20b.py  aoc2018_21a.py  aoc2018_23a.py  aoc2018_23b.py  aoc2018_24a.py  aoc2018_24b.py  aoc2018_2a.py  aoc2018_2b.py  aoc2018_3a.py  aoc2018_3b.py  aoc2018_4a.py  aoc2018_4b.py  aoc2018_5a.py  aoc2018_5b.py  aoc2018_6a.py  aoc2018_6b.py  aoc2018_7a.py  (+5 more)
2019/: aoc2019_10a.py  aoc2019_10b.py  aoc2019_11a.py  aoc2019_11b.py  aoc2019_12a.py  aoc2019_12b.py  aoc2019_1a.py  (+17 more)
(+93 files in other folders)
