[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["ByteCommander <me@bytecommander.de>"]
readme = "README.md"
packages = [
    { include = "aoc_tools" }
]

[tool.poetry.scripts]
aoc-start = 'aoc_tools.starter:main'

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
numpy = "^1.26.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
